[Change] Updated Changelog and Fix Java 8- Incompatibility